Ingress/ingress-tls.yaml
apiVersion: extensions/v1beta1  
kind: Ingress  
metadata:  
  name: codeurjc-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: "/"
spec:  
  tls:
    - hosts:
      - curso.minikube.io
      secretName: curso-minikube-secret
  rules:
  - host: curso.minikube.io
    http:
      paths:
      - path: /anuncios/
        backend:
          serviceName: java-webapp-db-service
          servicePort: 8080
      - path: /gatos
        backend:
          serviceName: webgatos-service
          servicePort: 5000
